# 202508_Kayton_2

./: .cursorrules  .gitignore  AGENTS.md  Cargo.toml  README.md
crates/kayton/: Cargo.toml
crates/kayton/tests/: cli_test.rs
crates/kayton_api/: Cargo.toml  build.rs  cbindgen.toml
crates/kayton_api/include/: kayton_api.h
crates/kayton_api/src/: api.rs  fns_dynamic.rs  fns_float.rs  fns_int.rs  fns_intern.rs  fns_kvec.rs  fns_registry.rs  fns_sint.rs  fns_string.rs  fns_tuple.rs  fns_uint.rs  kinds.rs  lib.rs  types.rs  vec_types.rs
crates/kayton_api/src/vec_types/: boolean.rs  core.rs  floats.rs  mod.rs  signed.rs  unsigned.rs
crates/kayton_api/tests/: context_api_test.rs  fns_type_defs_test.rs  function_type_registry_test.rs  global_str_buf_test.rs  types_test.rs  vec_types_boolean_test.rs  vec_types_core_test.rs  vec_types_floats_test.rs  vec_types_signed_test.rs  vec_types_unsigned_test.rs
crates/kayton_interactive_shared/: Cargo.toml
crates/kayton_interactive_shared/src/: lib.rs
crates/kayton_interactive_shared/tests/: for_loop_test.rs  program_output_test.rs
crates/kayton_kernel/: Cargo.toml  README.md  build.rs  install_kernel.py  prompt_problem.txt
crates/kayton_kernel/src/: args.rs  config.rs  install.rs  iopub.rs  jupyter.rs  kernel.rs  main.rs  protocol.rs  signing.rs
crates/kayton_plugin_sdk/: Cargo.toml
crates/kayton_plugin_sdk/src/: lib.rs  macros.rs  manifest.rs  rust_abi.rs
crates/kayton_plugin_sdk/tests/: manifest_tests.rs
crates/kayton_repl/: Cargo.toml
crates/kayton_repl/src/: lib.rs  main.rs
crates/kayton_repl/tests/: repl_persistence_test.rs
crates/kayton_vm/: Cargo.toml
crates/kayton_vm/src/: kinds.rs  lib.rs  reporters.rs  vm.rs  vm_host.rs
crates/kayton_vm/src/host/: dyn_store.rs  mod.rs  vm_fns_dynamic.rs  vm_fns_float.rs  vm_fns_intern.rs  vm_fns_sint.rs  vm_fns_string.rs  (+2 more)
crates/kayton_vm/tests/: plugin_loading.rs  vm_host_test.rs
crates/keyton_rust_compiler/: Cargo.toml
crates/keyton_rust_compiler/src/: defs.rs  diagnostics.rs  lib.rs  span.rs
crates/keyton_rust_compiler/src/compile_rust/: mod.rs  tests.rs
crates/keyton_rust_compiler/src/hir/: hir_types.rs  mod.rs  tests.rs
crates/keyton_rust_compiler/src/lexer/: mod.rs  tests.rs
crates/keyton_rust_compiler/src/parser/: mod.rs  tests.rs
crates/keyton_rust_compiler/src/rhir/: converter.rs  mod.rs  resolver.rs  sym.rs  tests.rs  types.rs
crates/keyton_rust_compiler/src/rimport/: env.rs
crates/keyton_rust_compiler/src/rust_codegen/: generator.rs  mod.rs  tests.rs  types.rs
crates/keyton_rust_compiler/src/shir/: checker.rs  example.rs  mod.rs  resolver.rs  sym.rs  tests.rs  types.rs
crates/keyton_rust_compiler/src/shir/resolver/: core.rs  defs.rs  errors.rs  expr.rs  mod.rs  program.rs  stmt.rs  user_funcs.rs
crates/keyton_rust_compiler/src/thir/: checker.rs  example.rs  mod.rs  tests.rs  types.rs
crates/kik/: Cargo.toml
crates/kik/src/: env.rs  kernel.rs  main.rs  rinstall.rs
crates/kik/tests/: cli_tests.rs
crates/plugin_hello/: Cargo.toml
crates/plugin_hello/src/: lib.rs
crates/plugin_hello/tests/: add_test.rs
design/: 20250907_current_design_for_rimport.md  20250907_rimport_plan.md  20250907_rimport_plan_1.md  20250907_rimport_plan_2.md  20250907_rimport_steps.md  prompts.md
notebooks/: 20250831_kayton_text.ipynb  calc_lines_in_files.py
notebooks/.ipynb_checkpoints/: 20250831_kayton_text-checkpoint.ipynb
