[package]
name = "kayton_kernel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
# Enable full Jupyter (ZeroMQ + HMAC) protocol
jupyter = ["dep:zmq", "dep:hmac", "dep:sha2"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
zmq = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

# Workspace
kayton_interactive_shared = { path = "../kayton_interactive_shared" }
kayton_vm = { path = "../kayton_vm" }

[build-dependencies]
serde_json = "1"
