[package]
name = "keyton_rust_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3.10"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
kayton_plugin_sdk = { path = "../kayton_plugin_sdk" }

[features]
examples = []

[dev-dependencies]
libloading = "0.8"
